Changes between 1.1.1 and 1.1.0
=====================================

- fix a bug with path.check(versioned=True) for svn paths

- try harder to have deprecation warnings for py.compat.* accesses
  report a correct location


Changes between 1.1.0 and 1.0.2
=====================================

* adjust and improve docs

* remove py.rest tool and internal namespace - it was
  never really advertised and can still be used with
  the old release if needed.  If there is interest 
  it could be revived into its own tool i guess.

* fix issue48 and issue59: raise an Error if the module
  from an imported test file does not seem to come from 
  the filepath - avoids "same-name" confusion that has
  been reported repeatedly

* merged Ronny's nose-compatibility hacks: now
  nose-style setup_module() and setup() functions are 
  supported

* introduce generalized py.test.mark function marking

* reshuffle / refine command line grouping

* deprecate parser.addgroup in favour of getgroup which creates option group

* add --report command line option that allows to control showing of skipped/xfailed sections 

* generalized skipping: a new way to mark python functions with skipif or xfail 
  at function, class and modules level based on platform or sys-module attributes. 

* extend py.test.mark decorator to allow for positional args

* introduce and test "py.cleanup -d" to remove empty directories 

* fix issue #59 - robustify unittest test collection

* make bpython/help interaction work by adding an __all__ attribute 
  to ApiModule, cleanup initpkg

* use MIT license for pylib, add some contributors

* remove py.execnet code and substitute all usages with 'execnet' proper

* fix issue50 - cached_setup now caches more to expectations 
  for test functions with multiple arguments. 

* merge Jarko's fixes, issue #45 and #46

* add the ability to specify a path for py.lookup to search in

* fix a funcarg cached_setup bug probably only occuring 